--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
