--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,17 @@
+FROM maven:3.8.4-openjdk-17-slim
+
+WORKDIR /app
+
+COPY pom.xml .
+COPY src /app/src
+
+RUN mvn clean package
+
 FROM openjdk:17-jdk-oracle
 
-WORKDIR /ServerApplication
+WORKDIR /opt/app
 
-COPY target/server-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/server-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 
