--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: server
   datasource:
-    url: jdbc:postgresql://localhost:5432/pizza-shop
-    username: postgres
-    password: ${DB_PASSWORD}
+    url: ${POSTGRES_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
